--- a/07_레이아웃스타일1.html
+++ b/07_레이아웃스타일1.html
@@ -92,7 +92,7 @@
     <div id="container-2">
 
         <!-- 내부에 영역을 분할할 요소-->
-        <div class="div-2"></div>        
+        <div class="div-2"></div>
         <div class="div-2"></div>      
         <div class="div-2"></div>      
 
@@ -112,8 +112,7 @@
     <div id="container-3">
 
         <div class="div-3"></div><div class="div-3"></div> 
-        <!--내부의 두 요소 사이에 엔터 == 한칸
-        띄어쓰기 -->
+        <!--내부의 두 요소 사이에 엔터 == 한칸 띄어쓰기 -->
 
     </div>
 
